<resources>
    <string name="app_name">Fleet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="empty_cart">Your cart is Empty </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cart">Cart</string>
    <string name="title_activity_test">test</string>

    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="action_signup">Sign Up</string>
    <string name="action_login">Log In</string>
    <string name="action_aacount_exists">Already have an account ? sign in</string>
    <string name="action_new_account">New user ? create an account</string>

</resources>
